# tact

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  install.sh  rustfmt.toml  tact.example.toml
.cargo/: config.toml
.githooks/: pre-commit.sh  pre-push
book/: 01_chapter_store.md  01_chapter_store_zh.md  02_chapter_prompt.md  02_chapter_skill.md  02_chapter_skill_zh.md  03_chapter_memory.md  03_chapter_memory_zh.md  03_chapter_task.md  04_chapter_hook.md  04_chapter_prompt.md  04_chapter_prompt_zh.md  05_chapter_compact.md  05_chapter_compact_zh.md  05_chapter_cron.md  06_chapter_permission.md  06_chapter_recovery.md  06_chapter_recovery_zh.md  07_chapter_memory.md  07_chapter_tool.md  07_chapter_tool_zh.md  08_chapter_mcp.md  08_chapter_mcp_zh.md  09_chapter_hook.md  09_chapter_hook_zh.md  09_chapter_store.md  10_chapter_permission.md  10_chapter_permission_zh.md  10_chapter_tool.md  11_chapter_task.md  11_chapter_task_zh.md  12_chapter_subagent.md  12_chapter_subagent_zh.md  13_chapter_background.md  13_chapter_background_zh.md  13_chapter_team.md  14_chapter_team.md  14_chapter_team_zh.md  15_chapter_worktree.md  15_chapter_worktree_zh.md  16_chapter_background.md  (+29 more)
crates/tact/: Cargo.toml  architecture.md  tact.en.md  tact.md
crates/tact-ui/: Cargo.toml
crates/tact-ui/src/: account.rs  driver.rs  headless.rs  headless_session.rs  image_attach.rs  interactive.rs  lib.rs  main.rs  permission.rs  plugin_cli.rs  session_lock.rs  sessions.rs  test_support.rs  user_message.rs
crates/tact-ui/tests/: app_bridge_integration.rs  driver_integration.rs  harness_advanced.rs  headless_session_integration.rs  headless_tui_advanced.rs  mcp_tools.rs  permission_integration.rs  plugin_cli_tests.rs  recovery_compaction.rs  subsystem_tools.rs  tool_integration.rs
crates/tact-ui/tests/harness/: mod.rs
crates/tact/src/: background.rs  compact.rs  config.rs  consts.rs  lib.rs  lsp.rs  main.rs  recovery.rs  shell.rs  stats.rs  team.rs  tool_schedule.rs
crates/tact/src/agent/: mod.rs  tool_dispatch.rs  tool_schedule.rs
crates/tact/src/compact/: mod.rs
crates/tact/src/config/: cli.rs  instruction_sources.rs  load.rs  mod.rs  persist.rs  resolve.rs  types.rs
crates/tact/src/cron/: mod.rs
crates/tact/src/hook/: mod.rs
crates/tact/src/llm/: anthropic.rs  convert.rs  mod.rs  openai.rs  test_openai.rs
crates/tact/src/lsp/: client.rs  config.rs  diagnostic.rs  manager.rs  mod.rs  protocol.rs  symbols.rs  uri.rs
crates/tact/src/mcp/: mod.rs
crates/tact/src/memory/: mod.rs
crates/tact/src/notifications/: mod.rs
crates/tact/src/permission/: mod.rs
crates/tact/src/plugin/: install.rs  marketplace.rs  mod.rs  model.rs  store.rs
crates/tact/src/prompt/: mod.rs  system_prompt_template.bak.md  system_prompt_template.md
crates/tact/src/session_store/: mod.rs  sqlite.rs
crates/tact/src/skill/: mod.rs
crates/tact/src/store/: mod.rs
crates/tact/src/store/session_store/: mod.rs  process_identity.rs  session_lock.rs  sqlite.rs
crates/tact/src/task/: mod.rs
crates/tact/src/tool/: apply_patch.rs  ask_user.rs  background.rs  background_run.rs  bash.rs  batch_edit.rs  batch_read.rs  compact.rs  cron.rs  edit_file.rs  http.rs  load_skill.rs  lsp.rs  lsp_tool.rs  math.rs  memory.rs  mod.rs  path.rs  progress.rs  read_file.rs  registry.rs  search_code.rs  sleep.rs  subagent.rs  task.rs  team.rs  test_support.rs  web_fetch.rs  web_search.rs  worktree.rs  write_file.rs
crates/tact/src/tool/web/: http.rs  mod.rs  web_fetch.rs  web_refs.rs  web_search.rs
crates/tact/src/utils/: mod.rs  output_truncation.rs  truncate.rs
crates/tact/src/worktree/: mod.rs
crates/tact_llm/: Cargo.toml
crates/tact_llm/src/: account.rs  anthropic.rs  client.rs  content.rs  convert.rs  error.rs  hook_select.rs  inject.rs  lib.rs  mock.rs  models.rs  openai.rs  provider.rs  provider_kind.rs  request.rs  stop_reason.rs  test_deepseek_reasoning.rs  test_kimi_reasoning.rs  test_openai.rs  types.rs  xai.rs
crates/tact_llm/src/anthropic/: mod.rs
crates/tact_llm/src/deepseek/: mod.rs
crates/tact_llm/src/kimi/: mod.rs
crates/tact_llm/src/openai/: body.rs  compat.rs  mod.rs  multi_model.rs  wrapper.rs
crates/tact_llm/src/openai/responses/: convert.rs  history.rs  mod.rs  normalize.rs  stream.rs
crates/tui/: Cargo.toml  build.rs
crates/tui/src/: headless_loop.rs  i18n.rs  lib.rs  system_prompt.rs  test_support.rs  theme.rs  theme_detection.rs
crates/tui/src/handlers/: file_picker.rs  insert.rs  mod.rs  mouse.rs  normal.rs  overlay.rs  palette.rs  plugin.rs  search.rs  select.rs  skills.rs
crates/tui/src/render/: bar.rs  input.rs  layout.rs  log.rs  log_column.rs  log_render_tests.rs  log_style.rs  mod.rs  plan.rs  popup_scene_tests.rs  render_gap_tests.rs  render_md.rs  renderable.rs  scene_tests.rs  slash_style.rs  test_harness.rs  util.rs  welcome.rs
crates/tui/src/render/cells/: code.rs  diff.rs  mod.rs  separator.rs  text.rs  thinking.rs  tool.rs
crates/tui/src/render/popups/: code_popup.rs  command_palette.rs  diff_popup.rs  file_picker.rs  help.rs  history.rs  mod.rs  select.rs  selectable_text.rs  slash_command.rs  system_prompt_popup.rs  thinking_popup.rs
crates/tui/src/state/: input_history.rs  mod.rs  search_state.rs
crates/tui/src/state/app/: agent.rs  config.rs  construct.rs  messages.rs  mod.rs  popups.rs  search.rs  visibility.rs
crates/tui/src/widgets/: help_widget.rs  history_panel_widget.rs  mod.rs  popup_widget.rs  select_popup_widget.rs  tool_widget.rs
crates/tui/src/widgets/state/: account.rs  file_picker.rs  input_history.rs  log_messages.rs  log_scroll.rs  mod.rs  mouse_state.rs  plan_panel.rs  select_popup.rs  slash_command.rs  status_bar_state.rs  stream_state.rs  thinking_state.rs  tool_state.rs
crates/tui/src/widgets/state/app/: agent.rs  config.rs  construct.rs  messages.rs  mod.rs  popups.rs  search.rs  visibility.rs
docs/: agent_guidelines.md  batch_tools_flow.md  compaction.md  log-panel-analysis.md  parallel_tool_execution.md  state_machines.md  token_usage_schema.md  tool_rendering.md  tui_rendering.md
scripts/: fmt-rust.sh  (+4 more)
(+59 files in other folders)
