[workspace]
members = [
    "crates/core",
    "crates/tools",
    "crates/tui",
    "crates/tact",
    "crates/tool_refactor_macros",
]
resolver = "2"

[workspace.package]
version = "0.19.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anthropic-ai-sdk = "0.2"
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
derive_builder = "0.20"
dotenvy = "0.15"
proc-macro2 = "1.0"
quote = "1.0"
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
syn = { version = "2.0", features = ["full"] }
tera = "1"
console-subscriber = "0.5"
tracing = "0.1"
dashmap = "6"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["tracing"] }
toml = "0.8"
walkdir = "2.5"
