[package]
name = "tact"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tact_protocol = { path = "../protocol" }
tact_llm = { path = "../tact_llm" }
tool_refactor_macros = { path = "../tool_refactor_macros" }
anyhow = { workspace = true }
async-openai = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
dashmap = { workspace = true }
derive_builder = { workspace = true }
futures-util = { workspace = true }
globset = { workspace = true }
reqwest = { workspace = true }
reqwest-eventsource = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tera = { workspace = true }
tokio = { workspace = true, features = ["fs", "net", "process", "sync", "time", "tracing"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }

[features]
test-support = []

[dev-dependencies]
rmcp = { workspace = true, features = ["server"] }
tempfile = { workspace = true }
