[package]
name = "tact_llm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tact_protocol = { path = "../protocol" }
anyhow = { workspace = true }
async-openai = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
eventsource-stream = { workspace = true }
reqwest-eventsource = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "macros", "rt-multi-thread"] }
tracing = { workspace = true }

[dev-dependencies]
dotenvy = { workspace = true }
