[package]
name = "tui"
version = "0.1.0"
edition = "2024"

[dependencies]
tact_core = { path = "../core" }
ratatui = "0.30"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio-stream = "0.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
pulldown-cmark = "0.13"
chrono = "0.4"
arboard = "3"
base64 = "0.22"
regex = "1"
unicode-segmentation = "1"
unicode-width = "0.2"
tui-markdown = "0.3.7"
