[package]
name = "tui"
version = "0.1.0"
edition = "2024"

[features]
test-support = []

[dependencies]
tact_protocol = { path = "../protocol" }
anyhow = { workspace = true }
arboard = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
crossterm = { workspace = true }
pulldown-cmark = { workspace = true }
ratatui = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tui-markdown = { workspace = true }
unicode-segmentation = { workspace = true }
unicode-width = { workspace = true }

[build-dependencies]
toml = { workspace = true }
